--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ apply plugin: 'java'
 apply plugin: 'forge'
 apply plugin: 'maven'
 
+sourceCompatibility = 7
+targetCompatibility = 7
+
 version = "1.5.11-RC3_1.7.10"
 group= "mcp.mobius.waila" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Waila"
