--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        mavenLocal()
         mavenCentral()
         maven {
             name = "forge"
@@ -11,7 +12,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT-2'
     }
 }
 
@@ -23,7 +24,7 @@ configurations {
 
 //add dependency repositories
 repositories {
-	mavenLocal()
+    mavenLocal()
     mavenCentral()
     maven {
         name = "chickenbones"
@@ -52,12 +53,27 @@ configFile.withReader {
     project.ext.config = new ConfigSlurper().parse prop
 }
 
+/*configurations {
+    ecj
+}*/
+
 dependencies {
+    //ecj 'org.eclipse.jdt.core.compiler:ecj:4.4.2'
     compile "codechicken:CodeChickenLib:${config.mc_version}-${config.ccl_version}:dev"
     compile "codechicken:CodeChickenCore:${config.mc_version}-${config.ccc_version}:dev"
     compile "codechicken:NotEnoughItems:${config.mc_version}-${config.nei_version}:dev"
-    deployerJars "org.apache.maven.wagon:wagon-ssh:2.2"
+    //deployerJars "org.apache.maven.wagon:wagon-ssh:2.2"
 }
+
+/*compileJava {
+    options.fork = true
+    options.encoding = 'utf-8'
+    options.compilerArgs = ['-target',targetCompatibility,'-source',sourceCompatibility]
+      options.forkOptions.with {
+      executable = 'java'
+      jvmArgs = ['-classpath', project.configurations.ecj.asPath, 'org.eclipse.jdt.internal.compiler.batch.Main', '-nowarn']
+      }
+}*/
 
 minecraft {
     version = "1.7.10-${config.forge_version}-1.7.10"
@@ -132,7 +148,7 @@ artifacts {
     archives sourceJar, devJar
 }
 
-uploadArchives {
+/*uploadArchives {
 	dependsOn 'reobf'
     repositories.mavenDeployer {
         configuration = configurations.deployerJars
@@ -153,4 +169,4 @@ uploadArchives {
         }
     }
 
-}
+}*/
